# MaLTHA

./: .gitignore  CLAUDE.md  MaLTHA.yml  README.md  __main__.py  act1-post_convert.py  config.toml  convert.py  database.py  format.py  generate.py  main.py  post.py  pyMoTH.yml  pyMoTH_v0.2.0.yml  pyMoTH_v0.2.1.yml  pyMoTH_v0.2.3.yml  pyproject.toml  requirements.txt  setup.py  static.yml  version.txt
MaLTHA/: __main__.py  convert.py  database.py  generate.py
